test-fixtures/machine-dsl-tests/tests/compile_fail/composition_protocol_rejects_raw_effect_shape.stderr
error[E0603]: function `accept_evaluate_until_condition` is private
 --> tests/compile_fail/composition_protocol_rejects_raw_effect_shape.rs:4:50
  |
4 |     let _ = protocol_flow_loop_until_evaluation::accept_evaluate_until_condition("not an effect");
  |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private function
  |
note: the function `accept_evaluate_until_condition` is defined here
 --> $WORKSPACE/meerkat-mob/src/generated/protocol_flow_loop_until_evaluation.rs
  |
  | / pub(crate) fn accept_evaluate_until_condition(
  | |     source: LoopUntilEvaluationRequested,
  | | ) -> FlowLoopUntilEvaluationObligation {
  | |______________________________________^

error[E0308]: mismatched types
 --> tests/compile_fail/composition_protocol_rejects_raw_effect_shape.rs:4:82
  |
4 |     let _ = protocol_flow_loop_until_evaluation::accept_evaluate_until_condition("not an effect");
  |             -------------------------------------------------------------------- ^^^^^^^^^^^^^^^ expected `LoopUntilEvaluationRequested`, found `&str`
  |             |
  |             arguments to this function are incorrect
  |
note: function defined here
 --> $WORKSPACE/meerkat-mob/src/generated/protocol_flow_loop_until_evaluation.rs
  |
  | pub(crate) fn accept_evaluate_until_condition(
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
